trunk/Source/imgproc/imgproc-operations.ads


   pragma Import (C, Cv_Find_Contours, "cvFindContours");
   pragma Import (C, Cv_Start_Find_Contours, "cvStartFindContours");
   pragma Import (C, Cv_Find_Next_Contour, "cvFindNextContour");
   pragma Import (C, Cv_Substitute_Contour, "cvSubstituteContour");
   pragma Import (C, Cv_End_Find_Contours, "cvEndFindContours");
   pragma Import (C, Cv_Approx_Chains, "cvApproxChains");
   pragma Import (C, Cv_Start_Read_Chain_Points, "cvStartReadChainPoints");
   pragma Import (C, Cv_Read_Chain_Point, "cvReadChainPoint");

   pragma Import (C, Cv_Init_Subdiv_Delaunay_2d, "cvInitSubdivDelaunay2D");
   pragma Import (C, Cv_Create_Subdiv_2d, "cvCreateSubdiv2D");

   pragma Import (C, Cv_Create_Subdiv_Delaunay_2d, "cvCreateSubdivDelaunay2D");
   pragma Import (C, Cv_Subdiv_Delaunay_2d_Insert, "cvSubdivDelaunay2DInsert");
   pragma Import (C, Cv_Subdiv_2d_Locate, "cvSubdiv2DLocate");
   pragma Import (C, Cv_Calc_Subdiv_Voronoi_2d, "cvCalcSubdivVoronoi2D");
   pragma Import (C, Cv_Clear_Subdiv_Voronoi_2d, "cvClearSubdivVoronoi2D");
   pragma Import (C, Cv_Find_Nearest_Point_2d, "cvFindNearestPoint2D");
   pragma Import (C, Cv_Subdiv_2d_Next_Edge, "cvSubdiv2DNextEdge");
   pragma Import (C, Cv_Subdiv_2d_Rotate_Edge, "cvSubdiv2DRotateEdge");
   pragma Import (C, Cv_Subdiv_2d_Sym_Edge, "cvSubdiv2DSymEdge");
   pragma Import (C, Cv_Subdiv_2d_Get_Edge, "cvSubdiv2DGetEdge");
   pragma Import (C, Cv_Subdiv_2d_Edge_Org, "cvSubdiv2DEdgeOrg");
   pragma Import (C, Cv_Subdiv_2d_Edge_Dst, "cvSubdiv2DEdgeDst");
   pragma Import (C, Cv_Triangle_Area, "cvTriangleArea");

   pragma Import (C, Cv_Approx_Poly, "cvApproxPoly");
   pragma Import (C, Cv_Arc_Length, "cvArcLength");
   pragma Import (C, Cv_Bounding_Rect, "cvBoundingRect");
   pragma Import (C, Cv_Contour_Area, "cvContourArea");
   pragma Import (C, Cv_Min_Area_Rect2, "cvMinAreaRect2");
   pragma Import (C, Cv_Min_Enclosing_Circle, "cvMinEnclosingCircle");
   pragma Import (C, Cv_Match_Shapes, "cvMatchShapes");
   pragma Import (C, Cv_Convex_Hull2, "cvConvexHull2");
   pragma Import (C, Cv_Check_Contour_Convexity, "cvCheckContourConvexity");
   pragma Import (C, Cv_Convexity_Defects, "cvConvexityDefects");
   pragma Import (C, Cv_Fit_Ellipse2, "cvFitEllipse2");
   pragma Import (C, Cv_Max_Rect, "cvMaxRect");
   pragma Import (C, Cv_Box_Points, "cvBoxPoints");
   pragma Import (C, Cv_Point_Seq_From_Mat, "cvPointSeqFromMat");
   pragma Import (C, Cv_Point_Polygon_Test, "cvPointPolygonTest");

   pragma Import (C, Cv_Create_Hist, "cvCreateHist");
   pragma Import (C, Cv_Set_Hist_Bin_Ranges, "cvSetHistBinRanges");
   pragma Import (C, Cv_Make_Hist_Header_For_Array, "cvMakeHistHeaderForArray");
   pragma Import (C, Cv_Release_Hist, "cvReleaseHist");
   pragma Import (C, Cv_Clear_Hist, "cvClearHist");
   pragma Import (C, Cv_Get_Min_Max_Hist_Value, "cvGetMinMaxHistValue");
   pragma Import (C, Cv_Normalize_Hist, "cvNormalizeHist");
   pragma Import (C, Cv_Thresh_Hist, "cvThreshHist");
   pragma Import (C, Cv_Compare_Hist, "cvCompareHist");
   pragma Import (C, Cv_Copy_Hist, "cvCopyHist");
   pragma Import (C, Cv_Calc_Bayesian_Prob, "cvCalcBayesianProb");
   pragma Import (C, Cv_Calc_Arr_Hist, "cvCalcArrHist");
   pragma Import (C, Cv_Calc_Hist, "cvCalcHist");
   pragma Import (C, Cv_Calc_Arr_Back_Project, "cvCalcArrBackProject");
   pragma Import (C, Cv_Calc_Arr_Back_Project_Patch, "cvCalcArrBackProjectPatch");
   pragma Import (C, Cv_Calc_Prob_Density, "cvCalcProbDensity");
   pragma Import (C, Cv_Equalize_Hist, "cvEqualizeHist");
   pragma Import (C, Cv_Dist_Transform, "cvDistTransform");
   pragma Import (C, Cv_Threshold, "cvThreshold");
   pragma Import (C, Cv_Adaptive_Threshold, "cvAdaptiveThreshold");
   pragma Import (C, Cv_Flood_Fill, "cvFloodFill");

   pragma Import (C, Cv_Canny, "cvCanny");
   pragma Import (C, Cv_Pre_Corner_Detect, "cvPreCornerDetect");
   pragma Import (C, Cv_Corner_Eigen_Vals_And_Vecs, "cvCornerEigenValsAndVecs");
   pragma Import (C, Cv_Corner_Min_Eigen_Val, "cvCornerMinEigenVal");
   pragma Import (C, Cv_Corner_Harris, "cvCornerHarris");
   pragma Import (C, Cv_Find_Corner_Sub_Pix, "cvFindCornerSubPix");
   pragma Import (C, Cv_Good_Features_To_Track, "cvGoodFeaturesToTrack");
   pragma Import (C, Cv_Hough_Lines2, "cvHoughLines2");
   pragma Import (C, Cv_Hough_Circles, "cvHoughCircles");
   pragma Import (C, Cv_Fit_Line, "cvFitLine");
   pragma Import (C, Cv_Create_Kd_Tree, "cvCreateKDTree");
   pragma Import (C, Cv_Create_Spill_Tree, "cvCreateSpillTree");
   pragma Import (C, Cv_Release_Feature_Tree, "cvReleaseFeatureTree");
   pragma Import (C, Cv_Find_Features, "cvFindFeatures");
   pragma Import (C, Cv_Find_Features_Boxed, "cvFindFeaturesBoxed");
   pragma Import (C, Cv_Create_Lsh, "cvCreateLSH");
   pragma Import (C, Cv_Create_Memory_Lsh, "cvCreateMemoryLSH");
   pragma Import (C, Cv_Release_Lsh, "cvReleaseLSH");
   pragma Import (C, Lsh_Size, "LSHSize");
   pragma Import (C, Cv_Lsh_Add, "cvLSHAdd");
   pragma Import (C, Cv_Lsh_Remove, "cvLSHRemove");
   pragma Import (C, Cv_Lsh_Query, "cvLSHQuery");
end Imgproc.Operations;
